<resources>
    <string name="app_name">Yopo</string>

    <!--> these are strings for the client register page <!-->
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="password">Password</string>
    <string name="home_success">Success!</string>
    <string name="city_field">City</string>
    <string name="street_field">Street</string>
    <string name="birth_date">Birth date dd/mm/yy</string>
    <string name="home_number">Home Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="phone">Phone Number</string>

    <!--> these are strings for client home page <!-->
    <string name="search_button">Search</string>
    <string name="calender_button">Calender</string>
    <string name="profile_button">Profile</string>
    <string name="logout">Logout</string>
    <string name="image_description">User Image Profile</string>

    <!--> these are strings for client search page <!-->
    <string name="search_button_user_search">Search Title</string>
    <string name="search_bar">Search</string>

    <!--> this array is used for business registration <!-->
    <string-array name="category_array">
        <item>Select Business Category</item>
        <item>Food</item>
        <item>Electronics</item>
        <item>Sports</item>
        <item>Other</item>
    </string-array>
    <string name="next">Next</string>

    <!-- these are for the business schedule page -->
    <string name="choose_day">Choose a day to view and edit schedule</string>
    <string-array name="days_of_the_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="day">Day:</string>
    <string name="apply_button_text">Apply</string>

    <!-- these are strings for the business landing page -->
    <string name="business_name">Name</string>
    <string name="business_description">Description: some text that describes the business </string>
    <string name="schedule_appointment_button_text">Schedule Appointment</string>
    <string name="service_list_button_text">Services and Prices</string>


    <!--> this array is used for business registration <!-->
    <string name="edit_profile">Edit Profile</string>

    <!--> these are strings for general use <!-->
    <string name="logo_name">YOPO</string>

    <!--> these are strings for the Business Home Page <!-->
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="edit">edit</string>

    <!--> these are string for the Appointment schedule page <!-->
    <string name="hours">spinner_hours</string>

    <!--> these are string for the business price list page <!-->
    <string name="price_list_title">Price List</string>

    <!-- this is for the card layout -->
    <string name="service_title">Service</string>
    <string name="price_title">Price</string>

    <!-- this is for the range card layout -->
    <string name="start_hour_text">choose starting hour</string>
    <string name="end_hour_text">choose closing hour for that range</string>
    <string name="new_range_text">New</string>
    <string-array name="list_of_hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

</resources>