<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout_classes.ClientHomeActivity">

    <TextView
        android:id="@+id/main_layout_title"
        android:layout_width="224dp"
        android:layout_height="74dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/logo_name"
        android:textAlignment="center"
        android:textColor="#039BE5"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logout"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/profile_button"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calender"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/calender_button"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toTopOf="@+id/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/search_button"
        android:textColor="#4A148C"
        app:layout_constraintBottom_toTopOf="@+id/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>