<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="-80dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_update_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/city"
        android:layout_width="159dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/city_field"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/street"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/street"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/street_field"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/floor_number"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:hint="@string/floor_number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/home_number"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/home_number"
        android:layout_width="157dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/home_number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floor_number" />

    <EditText
        android:id="@+id/business_description"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="bottom"
        android:hint="Business Description"
        android:inputType="textAutoComplete|textAutoCorrect"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number" />

    <Button
        android:id="@+id/update_business"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginBottom="36dp"
        android:background="#9F1919"
        android:text="update"
        android:textColor="#FDFAFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/business_update_name"
        android:layout_width="325dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Business Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Empty fields will not be changed"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business_description" />

</androidx.constraintlayout.widget.ConstraintLayout>